# ChessCoach

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  TODO.txt  activate_virtual_env.cmd  base.dockerfile  bayeselo.cmd  bayeselo.input  bionic_gcc8.sh  build.cmd  build.sh  cluster-common.sh  cluster-down.sh  cluster-kill.sh  cluster-play-deployment.yaml  cluster-prep-creds.sh  cluster-run.sh  cluster-train-deployment.yaml  cluster-up.sh  config.toml  cute.cmd  cute.sh  cute_kbnk.cmd  cute_tournament.cmd  cute_tournament.sh  cute_tournament2.cmd  cute_tournament3.cmd  cute_tournament4.cmd  cute_tournament5.cmd  cute_tournament6.cmd  dev.cmd  docker-build-upload.sh  docker-build.sh  docker-run-play.sh  docker-run-train.sh  docker-run.sh  meson.build  model.py  (+21 more)
cluster/: cluster-common.sh  cluster-down.sh  cluster-kill.sh  cluster-prep-creds.sh  cluster-train-deployment.yaml  cluster-up.sh
cpp/: .gitignore  ChessCoach.sln  Directory.Build.props  postbuild.cmd
cpp/ChessCoach/: ChessCoach.cpp  ChessCoach.h  ChessCoach.vcxproj  Config.cpp  Config.h  Epd.cpp  Epd.h  Game.cpp  Game.h  Network.h  Pgn.cpp  Pgn.h  Pipeline.cpp  Pipeline.h  Platform.cpp  Platform.h  PoolAllocator.cpp  PoolAllocator.h  PredictionCache.cpp  PredictionCache.h  Preprocessing.cpp  Preprocessing.h  PythonModule.cpp  PythonModule.h  PythonNetwork.cpp  PythonNetwork.h  Random.cpp  Random.h  ReplayBuffer.cpp  ReplayBuffer.h  SavedGame.cpp  SavedGame.h  SelfPlay.cpp  SelfPlay.h  Storage.cpp  Storage.h  Syzygy.cpp  Syzygy.h  Threading.cpp  Threading.h  (+2 more)
cpp/ChessCoachBot/: ChessCoachBot.cpp  ChessCoachBot.vcxproj
cpp/ChessCoachGui/: ChessCoachGui.cpp  ChessCoachGui.vcxproj
cpp/ChessCoachOptimizeParameters/: ChessCoachOptimizeParameters.cpp  ChessCoachOptimizeParameters.vcxproj
cpp/ChessCoachPgnToGames/: ChessCoachPgnToGames.cpp  ChessCoachPgnToGames.vcxproj
cpp/ChessCoachStrengthTest/: ChessCoachStrengthTest.cpp  ChessCoachStrengthTest.vcxproj
cpp/ChessCoachTest/: ChessCoachTest.vcxproj  ConfigTest.cpp  GameTest.cpp  MctsTest.cpp  NetworkTest.cpp  PgnTest.cpp  PoolAllocatorTest.cpp  PredictionCacheTest.cpp  StockfishTest.cpp  StorageTest.cpp
cpp/ChessCoachTrain/: ChessCoachTrain.cpp  ChessCoachTrain.vcxproj
cpp/ChessCoachTraining/: ChessCoachTrain.cpp  ChessCoachTraining.vcxproj
cpp/ChessCoachUci/: ChessCoachUci.cpp  ChessCoachUci.vcxproj
cpp/Stockfish/: Stockfish.vcxproj  position.cpp  position.h  types.h
cpp/StrengthTests/: Arasan20.epd  Arasan21.epd  ERET.epd  STS.epd
cpp/TestChessCoach/: PoolAllocatorTest.cpp  TestChessCoach.vcxproj
cpp/crc32c/: crc32c.vcxproj
cpp/crc32c/src/: crc32c.cc  crc32c_arm64_check.h  crc32c_prefetch.h
cpp/hunspell/: csutil.hxx  hunspell.vcxproj  hunvisapi.h
cpp/numpy/: LICENSE
cpp/protobuf/: ChessCoach.pb.cc  ChessCoach.pb.h  ChessCoach.proto  prebuild.cmd  protobuf.vcxproj
cpp/zlib/lib/: zlibstatic.lib  zlibstaticd.lib
data/: source_commentary.txt  source_training_validation.txt
docs/: data.html  development-process.html  high-level-explanation.html  index.html  site.css  technical-explanation.html
js/: gui.css  gui.html  gui.js
js/chessboardjs/js/: chessboard-1.0.0.js
py/: .gitignore  alpha.py  attention.py  attention_model.py  buildexe.cmd  chesscoach.cmd  config.py  convolution_model.py  dataset.py  engine.py  freeze.py  game.py  gsclean.py  gui.py  layers.py  lichessbot.py  main.py  model.py  network.py  optimization.py  predict.py  profiler.py  scrape.py  storage.py  suites.py  tokenization.py  training.py  transformer.py  uci_proxy_client.py  uci_proxy_server.py
py/chess-tuning-tools/: AUTHORS.rst  LICENSE
scripts/: bayeselo.cmd  bayeselo.input  bayeselo.sh  cloc.sh  cute.cmd  cute.sh  cute_kbnk.cmd  cute_kbnk.sh  cute_tournament.cmd  cute_tournament.sh  dev.cmd  download_install_data.cmd  download_install_data.sh  download_install_validation_data.cmd  download_install_validation_data.sh  kbnk.pgn  protoc.cmd  protoc.sh  ramdisk_syzygy6.sh  strengthtest_sts.cmd  strengthtest_sts.sh  tb.cmd  uci.cmd
tools/CuteChess/: cutechess-cli.6.txt  engines.json.5.txt
tools/deb/bayeselo/: CBradleyTerry.cpp  CCDistribution.cpp  CCDistribution.h  CDiscretization.h  CDistribution.h  CEloRatingCUI.cpp  CMatrix.cpp  CMatrix.h  CMatrixIO.cpp  CMatrixIO.h  CPredictionCUI.cpp  CResultSetCUI.cpp  CTimeIO.cpp  README  bayeselo.cpp  clktimer.cpp  consolui.cpp  debug.h  elomain.cpp  makefile  pgnlex.cpp  str.cpp  version.cpp  version_number.h
tools/deb/cutechess-cli/: cutechess-cli  cutechess-cli.6.html  engines.json.5.html
tools/win/AnMon/: AnMon.book  readme.txt
